
CHANGELOG for cops

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* fix endless redirection loop in Cop#redirectToCanonical, if
	addParameter(String, Cop) is used with parameters containing non-safe
	characters.
* change return type of Cop#needsSecure() from Boolean to boolean.
	
	Forcing http is no longer supported because of numerous problems.
	THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE !
	
	Take care, because the mapping between old and new return values of
	needsSecure may easily lead to mistakes! Boolean.FALSE is *not*
	replaced by false! See the table below:
	
		meaning       | old           | new
		-----------------------------------------------
		https         | Boolean.TRUE  | true
		http          | Boolean.FALSE | <not supported>
		any (default) | null          | false
	
	If you do not override needsSecure(), you don't have to do anything.
	
* remove forms
	- does not need commons-fileupload.jar and commons-io.jar anymore
	- you MUST update copernica to at least build 46
* made Cop.addParameter methods public
* add PropertiesServlet
* add BodySender to public API
* bugfix: look for resources in super classes of the servlet
* support nesting cops as cop parameters
* cleanup of cops url generation
  THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE !
  - Cop.toString() does not xml-encode anymore (& to &amp etc.)
  - removed Cop.toStringNonEncoded()
  - Cop.toString() and Resource.toString() do not return a usable url anymore, use new method toURL()
  - Cop.toURL() and Cop.toAbsolute() do not call response.encodeURL anymore
  - toURL() and toAbsolute() on classes Cop and Resource do need a parameter HttpServletRequest
  - rename method toAbsolute to getAbsoluteURL