@@ -4,4 +4,4 @@
 # key: jar file name
 # value: Specification-Version / cruise build version time, needs to be formatted as double
 
-exedio-cope-util = 60
+exedio-cope-util = 114
