@@ -36,6 +36,17 @@ table th
 	font-weight:normal;
 }
 
+table caption
+{
+	font-style:italic;
+	text-align:left;
+	white-space:nowrap;
+	background:#ccc;
+	padding:1px 5px;
+	border:solid 2px white;
+	border-bottom-width:0px;
+}
+
 table td
 {
 	text-align:left;
